outputs/20170809_output_OSX_CTorres.txt
cd c_src; gcc -std=c11 -Wall -lm \
		../lib/avltree/avltree.c geoloc.c test.c -o ../ctest.exe
geoloc.c:24:53: error: function definition is not allowed here
    int compare_ints(const void * a, const void * b){
                                                    ^
geoloc.c:27:61: error: use of undeclared identifier 'compare_ints'
    qsort(sol_a->facilities,sol_a->n_facilities,sizeof(int),compare_ints);
                                                            ^
geoloc.c:28:61: error: use of undeclared identifier 'compare_ints'
    qsort(sol_b->facilities,sol_b->n_facilities,sizeof(int),compare_ints);
                                                            ^
geoloc.c:43:26: error: function definition is not allowed here
    uint hash_int(uint x){
                         ^
geoloc.c:52:29: warning: implicit declaration of function 'hash_int' is invalid in C99 [-Wimplicit-function-declaration]
    sol->hash = sol->hash ^ hash_int(newf);
                            ^
geoloc.c:191:62: error: function definition is not allowed here
        int compare_dist_to_f(const void * a, const void * b){
                                                             ^
geoloc.c:196:60: error: use of undeclared identifier 'compare_dist_to_f'
        qsort(prob->nearest[f],prob->n_clients,sizeof(int),compare_dist_to_f);
                                                           ^
geoloc.c:230:57: error: function definition is not allowed here
    int solution_value_cmp(const void *a, const void *b){
                                                        ^
geoloc.c:235:42: error: use of undeclared identifier 'solution_value_cmp'
    qsort(sols,*n_sols,sizeof(solution*),solution_value_cmp);
                                         ^
geoloc.c:410:57: error: function definition is not allowed here
    int solution_value_cmp(const void *a, const void *b){
                                                        ^
geoloc.c:415:49: error: use of undeclared identifier 'solution_value_cmp'
    qsort(final,current_sol_n,sizeof(solution*),solution_value_cmp);
                                                ^
1 warning and 10 errors generated.
make: *** [ctest] Error 1

